# SystemProduct

./: .env.example  .gitignore  AUTH_SETUP.md  README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
sidecar/: build_sidecar.bat  build_sidecar.sh  req_parser.py  requirements.txt  setup.bat  simulation_engine.py
src/: NodeRenderer.ts  app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_add_req_allocations.sql  003_add_docs_and_subsystems.sql  004_document_sections.sql  005_add_document_source_payload.sql  006_add_requirement_history.sql  007_add_subsystem_knowledge_body_format.sql  008_suspect_links.sql  009_comments.sql  010_reviews.sql  011_simulation.sql  012_value_types_and_state_machines.sql  013_baselines.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: anthropic.rs  context.rs  graphrag.rs  mod.rs  ollama.rs  provider.rs  suggestions.rs
src-tauri/src/ai/prompts/: system.txt
src-tauri/src/commands/: mod.rs
src-tauri/src/core/: mod.rs
src-tauri/src/core/export/: mod.rs
src-tauri/src/core/model/: mod.rs
src-tauri/src/core/store/: mod.rs
src-tauri/src/core/validation/: mod.rs
src-tauri/src/diagrams/: ir.rs  layout.rs  mod.rs
src-tauri/src/diagrams/sysml/: bdd.rs  ibd.rs  mod.rs
src-tauri/src/events/: mod.rs
src/lib/: CommentThread.svelte  theme.ts  types.ts
src/lib/ai/: AnalysisBadge.svelte  InlineAssist.svelte
src/lib/auth/: nhost.ts  (+2 more)
src/routes/: +layout.svelte  +page.svelte
src/styles/: sysml-symbols.css  tokens.css
(+30 files in other folders)
